於 Info.plist 中增加拍照及存取照片的權限

--- a/PiggyPatchwork/Info.plist
+++ b/PiggyPatchwork/Info.plist
@@ -41,5 +41,9 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSCameraUsageDescription</key>
+	<string>For taking photos</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>For saving photos</string>
 </dict>
 </plist>
