增加 Extension ( UIScreen、UIColor、UIImage) 及建立初步 MVC pattern

--- a/PiggyPatchwork/Info.plist
+++ b/PiggyPatchwork/Info.plist
@@ -42,8 +42,8 @@
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>NSCameraUsageDescription</key>
-	<string>For taking photos</string>
+	<string>將存取於您的相簿</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>For saving photos</string>
+	<string>將取用您的相機</string>
 </dict>
 </plist>
