點選 image view 連結相簿，並將選取的照片置入 view 中

--- a/PiggyPatchwork/Info.plist
+++ b/PiggyPatchwork/Info.plist
@@ -42,8 +42,10 @@
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>NSCameraUsageDescription</key>
-	<string>將存取於您的相簿</string>
+	<string>將取用您的相簿</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>將取用您的相機</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>將存取於您的相簿</string>
 </dict>
 </plist>
