--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -1,6 +1,7 @@
 disabled_rules:
   - trailing_whitespace
   - file_length
+  - function_body_length
 
 identifier_name:
   min_length: # only min_length
